syntax = "proto2";

package bigquery;

option go_package = "./pb";

message LogsTable {
	required string datetime = 1;
 	required int64 uid = 2;
	required string hash = 3;
	required string url = 4;
	required string event = 5;
	optional string unit = 6;
	optional string unit_name = 7;
	optional string details = 8;
	optional int64 config_id = 9;
}

message LogsHBTable {
	required string date = 1;
	required string event = 2;
	required int64 config_id = 3;
	optional string device = 4;
	optional string geo = 5;
	optional string creative_size = 6;
	optional string partner = 7;
	optional double revenue = 8;
	optional string currency = 9;
	optional int64 integration_id = 10;
	optional bool s2s = 11;
}

message LogsFCTable {
	required string date = 1;
	required int64 config_id = 2;
	required string geo = 3;
	required string device= 4;
	optional string creative_size = 5;
	required string event = 6;
	required int64 creative_id = 7;
}

message LogsBDTable {
	required int64 timestamp = 1;
	required int64 integration_id = 2;
	required int64 config_id = 3;
	required string event = 4;
	required string partner = 5;
	optional string device = 6;
	optional string geo = 7;
	optional string creative_size = 8;
	optional double revenue = 9;
	optional string currency = 10;
	optional bool s2s = 11;
}